--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ hello world, dimoge
 <hr>
 
 <form action="/check.do" method="post" id="">
-    uname:<input type="text"/> tel:<input type="text"/> <input type="submit"/>
+    uname:<input type="text" name="name"/> tel:<input type="text" name="tel"/> <input type="submit"/>
 </form>
 
 </body>
