express 路由学，　ｓｏ　ｅａｓｙ

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 hello world, dimoge
 <hr>
 
-<form action="/check.do" method="post" id="">
+<form action="/request/checking.do" method="post" id="">
     uname:<input type="text" name="name"/> tel:<input type="text" name="tel"/> <input type="submit"/>
 </form>
 
